Fixed overflow cutoff on video descriptions and other stuff that sits in slide tabs

--- a/app/assets/stylesheets/ui/slideouts.css
+++ b/app/assets/stylesheets/ui/slideouts.css
@@ -20,10 +20,19 @@
 .slideout.shown {
   opacity: 1;
   visibility: visible;
+  overflow: visible;
   background: var(--form-background);
 }
 .slideout:not(.shown) {
   margin: 0;
   min-height: 0 !important;
   max-height: 0 !important;
+}
+
+.slideout .group {
+  overflow: visible;
+}
+
+.slideout.js-computing-height {
+  overflow: hidden !important;
 }
